--- a/resources/modules/global/css/table.css
+++ b/resources/modules/global/css/table.css
@@ -2,8 +2,8 @@ thead {
     border-bottom: 1px solid #ededed;
 }
 
-.table thead > tr > td,
-.table thead > tr > th {
+.table thead>tr>td,
+.table thead>tr>th {
     background-color: #fafafa;
     font-family: "Inter";
     font-style: normal;
@@ -12,25 +12,25 @@ thead {
     color: #15034c;
 }
 
-.table thead > tr > td:first-child {
+.table thead>tr>td:first-child {
     padding: 16px 16px 16px 32px;
 }
 
 @media (min-width: 767px) {
-    .table tbody > tr > td:first-child {
+    .table tbody>tr>td:first-child {
         padding-left: 32px;
     }
 }
 
-.table tbody > tr > td {
+.table tbody>tr>td {
     font-family: "Inter";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
 }
 
-.table-striped > tbody > tr:nth-child(even) > td,
-.table-striped > tbody > tr:nth-child(even) > th {
+.table-striped>tbody>tr:nth-child(even)>td,
+.table-striped>tbody>tr:nth-child(even)>th {
     background-color: #fbfbfb;
 }
 
@@ -62,9 +62,19 @@ thead {
     border-radius: 4px;
     background-color: #ffffff;
 }
-.table tbody > tr {
+
+.table tbody>tr {
     border-bottom: 1px solid #ebebeb;
 }
-.table tbody > tr:last-child {
+
+.table tbody>tr:last-child {
     border-bottom: none;
+}
+
+#pagination-order-bump .nav-btn {
+    min-width: 36px;
+    height: 36px;
+    padding: 0;
+    border: none;
+    border-radius: 4px;
 }
