--- a/Modules/Trackings/Resources/assets/css/index.css
+++ b/Modules/Trackings/Resources/assets/css/index.css
@@ -236,9 +236,9 @@ h4.number {
     border-radius: 0.5em 0 0 0.5em !important;
 }
 
-#btn-export-csv {
+/* #btn-export-csv {
     border-radius: 0em 0.5em 0.5em 0 !important;
-}
+} */
 
 .disableFields {
     background-color: #f3f7f9;
