--- a/resources/modules/global/css/new-site.css
+++ b/resources/modules/global/css/new-site.css
@@ -720,7 +720,7 @@ h3 {
 }
 
 .badge-antifraude {
-    background: #2E85EC;
+    background: #2e85ec;
 }
 
 .badge-aprovado,
@@ -780,7 +780,7 @@ h3 {
 
 .table-striped > tbody > tr:nth-child(2n + 2) > td,
 .table-striped > tbody > tr:nth-child(2n + 2) > th {
-    background-color: #fbfbfb ;
+    background-color: #fbfbfb;
 }
 
 .table-striped tbody tr:nth-of-type(2n + 1) {
@@ -1002,15 +1002,15 @@ h3 {
 }
 
 .site-menubar {
-    background: #0e0233;
+    background: #263238;
 }
 
 .site-menu-item.active {
-    background: #0e0233;
+    background: #263238;
 }
 
 .site-menu-item > .site-menu-sub {
-    background-color: #0e0233;
+    background-color: #263238;
 }
 
 .site-menu-item.active > a {
