--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -20,7 +20,7 @@ body {
     border-radius: 16px;
 }
 
-.menu-active>.bg-menu {
+.menu-active > .bg-menu {
     background: #2e85ec;
     border-radius: 0 44px 44px 0;
     display: inline-block;
@@ -445,7 +445,6 @@ a.label {
 }
 
 @media (max-width: 767px) {
-
     .site-menubar-fold .page,
     .site-menubar-fold .site-footer {
         margin-left: 0px;
@@ -480,8 +479,8 @@ a.label {
     -webkit-text-fill-color: transparent;
 }
 
-.site-menu-item.has-sub>a,
-.site-menu-item>.site-menu-sub>li {
+.site-menu-item.has-sub > a,
+.site-menu-item > .site-menu-sub > li {
     margin-bottom: 5px;
     padding-left: 0 !important;
 
@@ -490,7 +489,7 @@ a.label {
     transition: all 0.3s;
 }
 
-.site-menu-item:hover>a>span:first-child {
+.site-menu-item:hover > a > span:first-child {
     border-radius: 0 44px 44px 0;
     display: inline-block;
     margin-right: 10px;
@@ -500,7 +499,7 @@ a.label {
     transition: all 0.3s;
 }
 
-.site-menu-item:hover>a>span>img {
+.site-menu-item:hover > a > span > img {
     filter: brightness(0) invert(1);
 }
 
@@ -517,7 +516,7 @@ a.label {
     transition: all 0.3s;
 }
 
-.menu-active>span {
+.menu-active > span {
     color: #fff;
     background: #fff;
     -webkit-background-clip: text;
@@ -526,7 +525,7 @@ a.label {
     -webkit-text-fill-color: transparent;
 }
 
-.menu-active>span>img {
+.menu-active > span > img {
     filter: brightness(0) invert(1);
     height: 100%;
 }
@@ -557,22 +556,22 @@ a.label {
     border-radius: 16px;
 }
 
-.table thead>tr>td:first-child,
-.table thead>tr>th:first-child {
+.table thead > tr > td:first-child,
+.table thead > tr > th:first-child {
     border-radius: 0px 0px 0px 0px !important;
     -webkit-border-radius: 0px 0px 0px 0px !important;
     -moz-border-radius: 0px 0px 0px 0px !important;
 }
 
-.table thead>tr>td:last-child,
-.table thead>tr>th:last-child {
+.table thead > tr > td:last-child,
+.table thead > tr > th:last-child {
     border-radius: 0px 0px 0px 0px !important;
     -webkit-border-radius: 0px 0px 0px 0px !important;
     -moz-border-radius: 0px 0px 0px 0px !important;
 }
 
-.table thead>tr>td,
-.table thead>tr>th {
+.table thead > tr > td,
+.table thead > tr > th {
     background-color: #fbfbfb !important;
     border-top: 1px solid #f7f7f7 !important;
     border-bottom: 1px solid #f7f7f7 !important;
@@ -580,8 +579,8 @@ a.label {
     /* color: #002654; */
 }
 
-.table thead>tr>td:last-child,
-.table thead>tr>th:last-child {
+.table thead > tr > td:last-child,
+.table thead > tr > th:last-child {
     padding-right: 20px !important;
 }
 
@@ -717,14 +716,14 @@ a.label {
     border-radius: 30px !important;
 }
 
-.btn-group>.btn-group:not(:last-child)>.btn,
-.btn-group>.btn:not(:last-child):not(.dropdown-toggle) {
+.btn-group > .btn-group:not(:last-child) > .btn,
+.btn-group > .btn:not(:last-child):not(.dropdown-toggle) {
     border-top-left-radius: 16px;
     border-bottom-left-radius: 16px;
 }
 
-.btn-group>.btn-group:not(:first-child)>.btn,
-.btn-group>.btn:not(:first-child) {
+.btn-group > .btn-group:not(:first-child) > .btn,
+.btn-group > .btn:not(:first-child) {
     border-top-right-radius: 16px;
     border-bottom-right-radius: 16px;
 }
@@ -955,31 +954,31 @@ img.border-icon {
     padding: 18px 25px !important;
 }
 
-.new-layout .table thead>tr>td {
+.new-layout .table thead > tr > td {
     padding: 25px !important;
 }
 
-.new-layout .table tbody>tr>td:first-child {
+.new-layout .table tbody > tr > td:first-child {
     border-radius: 0 0 0 12px !important;
     -webkit-border-radius: 0 0 0 12px !important;
     -moz-border-radius: 0 0 0 12px !important;
 }
 
-.new-layout .table tbody>tr>td:last-child {
+.new-layout .table tbody > tr > td:last-child {
     border-radius: 0 0 12px 0 !important;
     -webkit-border-radius: 0 0 12px 0 !important;
     -moz-border-radius: 0 0 12px 0 !important;
 }
 
-.new-layout .table thead>tr>td:first-child,
-.new-layout .table thead>tr>th:first-child {
+.new-layout .table thead > tr > td:first-child,
+.new-layout .table thead > tr > th:first-child {
     border-radius: 12px 0 0 0 !important;
     -webkit-border-radius: 12px 0 0 0 !important;
     -moz-border-radius: 12px 0 0 0 !important;
 }
 
-.new-layout .table thead>tr>td:last-child,
-.new-layout .table thead>tr>th:last-child {
+.new-layout .table thead > tr > td:last-child,
+.new-layout .table thead > tr > th:last-child {
     border-radius: 0 12px 0 0 !important;
     -webkit-border-radius: 0 12px 0 0 !important;
     -moz-border-radius: 0 12px 0 0 !important;
@@ -1128,11 +1127,11 @@ img.border-icon {
     z-index: 2;
 }
 
-.modal-new-layout .input-group>.form-control:not(:last-child) {
+.modal-new-layout .input-group > .form-control:not(:last-child) {
     border-right: none;
 }
 
-.modal-new-layout .input-group-lg>.input-group-append>.input-group-text {
+.modal-new-layout .input-group-lg > .input-group-append > .input-group-text {
     border-radius: 0 8px 8px 0;
     border-color: #c1c1c1;
     background: #fff;
@@ -1575,8 +1574,8 @@ img.border-icon {
     opacity: 0.01;
 }
 
-.modal-plans [type="checkbox"]:not(:checked)+label,
-.modal-plans [type="checkbox"]:checked+label {
+.modal-plans [type="checkbox"]:not(:checked) + label,
+.modal-plans [type="checkbox"]:checked + label {
     position: relative;
     padding-left: 41px;
     font-size: 14px;
@@ -1586,8 +1585,8 @@ img.border-icon {
 }
 
 /* checkbox aspect */
-.modal-plans [type="checkbox"]:not(:checked)+label:before,
-.modal-plans [type="checkbox"]:checked+label:before {
+.modal-plans [type="checkbox"]:not(:checked) + label:before,
+.modal-plans [type="checkbox"]:checked + label:before {
     content: url("../img/icon-check.svg");
     position: absolute;
     left: 0;
@@ -1603,7 +1602,7 @@ img.border-icon {
     transition: all 0.275s;
 }
 
-.modal-plans [type="checkbox"]:checked+label:before {
+.modal-plans [type="checkbox"]:checked + label:before {
     content: url("../img/icon-check.svg");
     border: 1px solid #2e85ec;
     background: #2e85ec;
@@ -1681,13 +1680,13 @@ img.border-icon {
 }
 
 /* checked mark aspect changes */
-.modal-plans [type="checkbox"]:not(:checked)+label:after {
+.modal-plans [type="checkbox"]:not(:checked) + label:after {
     opacity: 0;
     -webkit-transform: scale(0) rotate(45deg);
     transform: scale(0) rotate(45deg);
 }
 
-.modal-plans [type="checkbox"]:checked+label:after {
+.modal-plans [type="checkbox"]:checked + label:after {
     opacity: 1;
     -webkit-transform: scale(1) rotate(0);
     transform: scale(1) rotate(0);
@@ -1803,7 +1802,7 @@ input[type="radio"] {
     border: none;
 }
 
-.ph-item>* {
+.ph-item > * {
     background-color: transparent;
     padding: 0;
     margin-top: 0;
@@ -1850,11 +1849,11 @@ input[type="radio"] {
     box-shadow: none !important;
 }
 
-.modal-new-layout input:checked+.slider {
+.modal-new-layout input:checked + .slider {
     background-color: #41dc8f !important;
 }
 
-.modal-new-layout input:checked+.slider::before {
+.modal-new-layout input:checked + .slider::before {
     left: 2px !important;
 }
 
@@ -1866,33 +1865,34 @@ input[type="radio"] {
 }
 
 .page-project .table .badge-success {
-    background-color: #41DC8F;
+    background-color: #41dc8f;
 }
 
 .page-project .table .badge-default {
     color: #999999 !important;
-    background-color: #EBEBEB;
+    background-color: #ebebeb;
 }
 
 .ph-item::before {
-    background: linear-gradient(90deg, hsla(0, 0%, 100%, 0) 55%, hsla(0, 0%, 100%, 0.35) 65%, hsla(0, 0%, 100%, 0) 75%) 100% 100%;
+    background: linear-gradient(90deg, hsla(0, 0%, 100%, 0) 55%, hsla(0, 0%, 100%, 0.35) 65%, hsla(0, 0%, 100%, 0) 75%)
+        100% 100%;
 }
 
-.page-project .table thead>tr>td:first-child,
-.page-project .table thead>tr>th:first-child,
-.page-project .table tbody>tr>td:first-child {
+.page-project .table thead > tr > td:first-child,
+.page-project .table thead > tr > th:first-child,
+.page-project .table tbody > tr > td:first-child {
     border-radius: 0 !important;
     padding-left: 38px !important;
 }
 
-.page-project .table thead>tr>td:last-child,
-.page-project .table thead>tr>th:last-child,
-.page-project .table tbody>tr>td:last-child {
+.page-project .table thead > tr > td:last-child,
+.page-project .table thead > tr > th:last-child,
+.page-project .table tbody > tr > td:last-child {
     border-radius: 0 !important;
     padding-right: 38px !important;
 }
 
-.page-project .table>thead>tr>td:nth-of-type(1) {
+.page-project .table > thead > tr > td:nth-of-type(1) {
     padding-top: 25px !important;
     padding-bottom: 25px !important;
 }
@@ -1969,7 +1969,7 @@ input[type="radio"] {
     margin-right: 0 !important;
 }
 
-.box-description .input-group-lg>.input-group-append>.input-group-text {
+.box-description .input-group-lg > .input-group-append > .input-group-text {
     height: 48px;
 }
 
@@ -1992,7 +1992,7 @@ input[type="radio"] {
     background-color: #fff;
 }
 
-.mCSB_horizontal.mCSB_inside>.mCSB_container {
+.mCSB_horizontal.mCSB_inside > .mCSB_container {
     margin-bottom: 12px !important;
 }
 
@@ -2007,7 +2007,7 @@ input[type="radio"] {
     margin: 6px 0 !important;
 }
 
-.mCSB_inside>.mCSB_container {
+.mCSB_inside > .mCSB_container {
     margin-right: 0px !important;
 }
 
@@ -2031,12 +2031,12 @@ input[type="radio"] {
     padding: 0 !important;
 }
 
-.modal-body.mCustomScrollbar .mCSB_inside>.mCSB_container {
+.modal-body.mCustomScrollbar .mCSB_inside > .mCSB_container {
     margin-right: 0px !important;
 }
 
-.box-products.mCustomScrollbar .mCSB_inside>.mCSB_container,
-.box-plans.mCustomScrollbar .mCSB_inside>.mCSB_container {
+.box-products.mCustomScrollbar .mCSB_inside > .mCSB_container,
+.box-plans.mCustomScrollbar .mCSB_inside > .mCSB_container {
     margin-right: 15px !important;
 }
 
@@ -2304,13 +2304,13 @@ tbody td {
     color: white !important;
 }
 
-.page-project .table>tbody>tr:nth-child(2n + 2)>td,
-.page-project .table>tbody>tr:nth-child(2n + 2)>th {
+.page-project .table > tbody > tr:nth-child(2n + 2) > td,
+.page-project .table > tbody > tr:nth-child(2n + 2) > th {
     background-color: #fbfbfb !important;
 }
 
-.page-project .table thead>tr>td,
-.page-project .table thead>tr>th {
+.page-project .table thead > tr > td,
+.page-project .table thead > tr > th {
     background-color: #ffffff;
     border-top: 1px solid #ededed !important;
     border-bottom: 1px solid #ededed !important;
@@ -2321,7 +2321,7 @@ tbody td {
 }
 
 .box-description .form-control:focus,
-.box-description .form-control:focus+.input-group-append .input-group-text {
+.box-description .form-control:focus + .input-group-append .input-group-text {
     border: 1px solid #46bcff;
 }
 
@@ -2475,7 +2475,7 @@ tbody td {
     z-index: 2;
 }
 
-.custom-tooltip>svg {
+.custom-tooltip > svg {
     width: 15px;
     height: 15px;
 }
@@ -2830,8 +2830,7 @@ tbody td {
 
 .init-operation-container .card,
 .init-operation-container .card * {
-    transition: background 300ms ease-in-out, border 300ms ease-in-out,
-        fill 300ms ease-in-out, color 300ms ease-in-out;
+    transition: background 300ms ease-in-out, border 300ms ease-in-out, fill 300ms ease-in-out, color 300ms ease-in-out;
 }
 
 .init-operation-container .card .icon svg {
@@ -3106,7 +3105,7 @@ tbody td {
     flex-direction: column;
 }
 
-.step-2-checkbox-container>div {
+.step-2-checkbox-container > div {
     column-gap: 12px;
 }
 
@@ -3147,7 +3146,6 @@ tbody td {
 }
 
 @media screen and (max-width: 767px) {
-
     #new-register-next-step,
     #new-register-previous-step {
         width: 45%;
@@ -3212,8 +3210,7 @@ tbody td {
 }
 
 #new-register-range::-webkit-slider-thumb {
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 0px 4px rgba(0, 0, 0, 0.04),
-        0px 0px 8px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 0px 8px rgba(0, 0, 0, 0.08);
     height: 28px;
     width: 28px;
     border-radius: 50%;
@@ -3232,8 +3229,7 @@ tbody td {
 }
 
 #new-register-range::-moz-range-thumb {
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 0px 4px rgba(0, 0, 0, 0.04),
-        0px 0px 8px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 0px 8px rgba(0, 0, 0, 0.08);
     height: 28px;
     width: 28px;
     border-radius: 50%;
@@ -3252,8 +3248,7 @@ tbody td {
 }
 
 #new-register-range::-ms-thumb {
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 0px 4px rgba(0, 0, 0, 0.04),
-        0px 0px 8px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 0px 8px rgba(0, 0, 0, 0.08);
     height: 28px;
     width: 28px;
     border-radius: 50%;
@@ -3318,25 +3313,21 @@ tbody td {
 
 @-webkit-keyframes ripple-blue {
     0% {
-        box-shadow: 0 0 0 0 rgba(16, 141, 236, 0.3),
-            0 0 0 5px rgba(16, 141, 236, 0.3);
+        box-shadow: 0 0 0 0 rgba(16, 141, 236, 0.3), 0 0 0 5px rgba(16, 141, 236, 0.3);
     }
 
     to {
-        box-shadow: 0 0 0 5px rgba(16, 141, 236, 0.3),
-            0 0 0 15px rgba(16, 141, 236, 0);
+        box-shadow: 0 0 0 5px rgba(16, 141, 236, 0.3), 0 0 0 15px rgba(16, 141, 236, 0);
     }
 }
 
 @keyframes ripple-blue {
     0% {
-        box-shadow: 0 0 0 0 rgba(16, 141, 236, 0.3),
-            0 0 0 5px rgba(16, 141, 236, 0.3);
+        box-shadow: 0 0 0 0 rgba(16, 141, 236, 0.3), 0 0 0 5px rgba(16, 141, 236, 0.3);
     }
 
     to {
-        box-shadow: 0 0 0 5px rgba(16, 141, 236, 0.3),
-            0 0 0 15px rgba(16, 141, 236, 0);
+        box-shadow: 0 0 0 5px rgba(16, 141, 236, 0.3), 0 0 0 15px rgba(16, 141, 236, 0);
     }
 }
 
@@ -3345,7 +3336,7 @@ tbody td {
     font-family: "Inter" !important;
 }
 
-.company-navbar+.sirius-select-text {
+.company-navbar + .sirius-select-text {
     border: 1px white solid;
     background-position-x: 92.5%;
     padding-right: 50px;
@@ -3356,7 +3347,7 @@ tbody td {
     font-size: 16px;
 }
 
-.company-navbar+.active {
+.company-navbar + .active {
     border: 1px solid #88bfff;
 }
 
@@ -3866,11 +3857,11 @@ tbody td {
     text-decoration: underline;
 }
 
-.table tbody>tr {
+.table tbody > tr {
     border-bottom: 1px solid #ebebeb;
 }
 
-.table tbody>tr:last-child {
+.table tbody > tr:last-child {
     border-bottom: none;
 }
 
@@ -3892,7 +3883,6 @@ tbody td {
     color: #999999;
     font-size: 12px;
 }
-
 
 @media (min-width: 1300px) {
     .client-collumn {
