--- a/Modules/Sales/Resources/assets/css/index.css
+++ b/Modules/Sales/Resources/assets/css/index.css
@@ -259,7 +259,7 @@ li.select2-selection__choice {
 }
 
 .btn-primary-1:hover {
-    background-color: #ff7a20;
+    background-color: #00b7ff;
 
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
