fix: change colocar dashboard

--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -665,28 +665,28 @@ a.label {
 .nephritis.s-border-left,
 .nephritis.s-border-top,
 .nephritis.s-border-bottom {
-    background: #27ae60 !important;
+    background: #97e7ff !important;
 }
 
 .emerland.s-border-right,
 .emerland.s-border-left,
 .emerland.s-border-top,
 .emerland.s-border-bottom {
-    background: #2ecc71 !important;
+    background: #76f9ff !important;
 }
 
 .green.s-border-right,
 .green.s-border-left,
 .green.s-border-top,
 .green.s-border-bottom {
-    background: #16a085 !important;
+    background: #000096 !important;
 }
 
 .turquoise.s-border-right,
 .turquoise.s-border-left,
 .turquoise.s-border-top,
 .turquoise.s-border-bottom {
-    background: #1abc9c !important;
+    background: #00b7ff !important;
 }
 
 .s-btn {
