--- a/resources/modules/global/css/new-site.css
+++ b/resources/modules/global/css/new-site.css
@@ -929,7 +929,8 @@ h3 {
     border: none;
     outline: none;
     font-weight: normal;
-    background-color: #263238;
+    background: rgb(25, 25, 25);
+    background: linear-gradient(90deg, rgba(25, 25, 25, 1) 0%, rgba(2, 114, 158, 1) 100%, rgba(0, 0, 0, 1) 100%);
 }
 
 .btn-primary:hover {
