--- a/resources/modules/global/adminremark/assets/css/loading.css
+++ b/resources/modules/global/adminremark/assets/css/loading.css
@@ -6,7 +6,7 @@
     z-index: 10000;
 }
 
-.blockScreen{
+.blockScreen {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -35,8 +35,8 @@
     position: fixed;
     top: 38%;
     left: 50%;
-    border: 16px solid #F3F3F3; /* Light grey */
-    border-top: 16px solid #3498DB; /* Blue */
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #00b7ff; /* Blue */
     border-radius: 50%;
     width: 100px;
     height: 100px;
@@ -58,8 +58,8 @@
     right: 0;
     top: 0;
     bottom: 0;
-    border: 10px solid #F3F3F3; /* Light grey */
-    border-top: 10px solid #3498DB; /* Blue */
+    border: 10px solid #f3f3f3; /* Light grey */
+    border-top: 10px solid #3498db; /* Blue */
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -71,9 +71,9 @@
     height: 100px;
 }
 .loaderModal {
-    border: 16px solid #F3F3F3;
+    border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498DB;
+    border-top: 16px solid #3498db;
     width: 80px;
     height: 80px;
     -webkit-animation: spin 2s linear infinite;
@@ -87,8 +87,8 @@
 }
 
 .loaderSpan {
-    border: 4px solid #F3F3F3;
-    border-top: 4px solid #3498DB;
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
     width: 25px;
     height: 25px;
     border-radius: 50%;
@@ -98,8 +98,8 @@
 }
 
 .loaderNotification {
-    border: 8px solid #F3F3F3;
-    border-top: 8px solid #3498DB;
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -117,15 +117,14 @@
     position: absolute;
     top: 38%;
     left: 38%;
-    border: 12px solid #F3F3F3; /* Light grey */
-    border-top: 12px solid #3498DB; /* Blue */
+    border: 12px solid #f3f3f3; /* Light grey */
+    border-top: 12px solid #3498db; /* Blue */
     border-radius: 50%;
     width: 60px;
     height: 60px;
     animation: spin 0.8s linear infinite;
     z-index: 3;
 }
-
 
 /*----------------------- FOX GIF LOADER ---------------------*/
 .foxLoading {
@@ -152,7 +151,7 @@
     min-height: 110px;
     top: 0px;
     left: 0px;
-    background-colour: #FFFFFF08;
+    background-colour: #ffffff08;
 }
 .foxLoaderTable {
     width: auto;
@@ -165,6 +164,10 @@
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
