--- a/resources/modules/global/css/loading.css
+++ b/resources/modules/global/css/loading.css
@@ -5,7 +5,7 @@
     z-index: 1000;
 }
 
-.blockScreen{
+.blockScreen {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -34,8 +34,8 @@
     position: fixed;
     top: 38%;
     left: 50%;
-    border: 16px solid #F3F3F3; /* Light grey */
-    border-top: 16px solid #3498DB; /* Blue */
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #00b7ff; /* Blue */
     border-radius: 50%;
     width: 100px;
     height: 100px;
@@ -48,14 +48,14 @@
     z-index: 10;
 }
 .loadingTable .loaderTable {
-    display:block;
+    display: block;
     margin: auto;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
-    border: 10px solid #F3F3F3; /* Light grey */
-    border-top: 10px solid #3498DB; /* Blue */
+    border: 10px solid #f3f3f3; /* Light grey */
+    border-top: 10px solid #3498db; /* Blue */
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -67,9 +67,9 @@
     height: 100px;
 }
 .loaderModal {
-    border: 16px solid #F3F3F3;
+    border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498DB;
+    border-top: 16px solid #3498db;
     width: 80px;
     height: 80px;
     -webkit-animation: spin 2s linear infinite;
@@ -83,8 +83,8 @@
 }
 
 .loaderSpan {
-    border: 4px solid #F3F3F3;
-    border-top: 4px solid #3498DB;
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
     width: 25px;
     height: 25px;
     border-radius: 50%;
@@ -94,8 +94,8 @@
 }
 
 .loaderNotification {
-    border: 8px solid #F3F3F3;
-    border-top: 8px solid #3498DB;
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -113,15 +113,14 @@
     position: absolute;
     top: 38%;
     left: 38%;
-    border: 12px solid #F3F3F3; /* Light grey */
-    border-top: 12px solid #3498DB; /* Blue */
+    border: 12px solid #f3f3f3; /* Light grey */
+    border-top: 12px solid #3498db; /* Blue */
     border-radius: 50%;
     width: 60px;
     height: 60px;
     animation: spin 0.8s linear infinite;
     z-index: 3;
 }
-
 
 /*----------------------- FOX GIF LOADER ---------------------*/
 .foxLoading {
@@ -160,11 +159,16 @@
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
-.loader-any-container, .loader-any-container-page{
+.loader-any-container,
+.loader-any-container-page {
     width: 100%;
     height: 100%;
     min-height: 250px;
@@ -173,7 +177,7 @@
     justify-content: center;
 }
 
-.loader-any-container-ellipsis{
+.loader-any-container-ellipsis {
     width: 100%;
     height: 100%;
     min-height: 250px;
@@ -182,14 +186,15 @@
     justify-content: center;
 }
 
-.loader-any, .loader-any-page{
+.loader-any,
+.loader-any-page {
     width: 75px;
     height: 75px;
     margin: 0;
     display: inline-block;
-    border-top: solid rgba(163,175,183,.5);
-    border-right: solid rgba(163,175,183,.5);
-    border-bottom: solid rgba(163,175,183,.5);
+    border-top: solid rgba(163, 175, 183, 0.5);
+    border-right: solid rgba(163, 175, 183, 0.5);
+    border-bottom: solid rgba(163, 175, 183, 0.5);
     border-left: solid #3498db;
     border-width: 10px;
     border-radius: 50%;
@@ -204,8 +209,8 @@
 }
 
 .ellipsis-anim span:nth-child(1) {
-    -webkit-animation-delay: 0.0s;
-    animation-delay: 0.0s;
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
 }
 .ellipsis-anim span:nth-child(2) {
     -webkit-animation-delay: 0.1s;
@@ -217,19 +222,31 @@
 }
 
 @-webkit-keyframes ellipsis-dot {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { opacity: 0; }
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 @keyframes ellipsis-dot {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { opacity: 0; }
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 .sirius-loading {
-    background-color: #f4f4f4;/*rgba(255, 255, 255, 1);*/
+    background-color: #f4f4f4; /*rgba(255, 255, 255, 1);*/
     position: fixed;
     width: 100%;
     height: 100%;
@@ -250,13 +267,25 @@
 }
 
 @-webkit-keyframes sirius-loading {
-    0% { opacity: 0.3; }
-    50% { opacity: 1; }
-    100% { opacity: 0.3; }
+    0% {
+        opacity: 0.3;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.3;
+    }
 }
 
 @keyframes sirius-loading {
-    0% { opacity: 0.3; }
-    50% { opacity: 1; }
-    100% { opacity: 0.3; }
+    0% {
+        opacity: 0.3;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.3;
+    }
 }
