--- a/Modules/Shopify/Stubs/AzcendSnippet.liquid
+++ b/Modules/Shopify/Stubs/AzcendSnippet.liquid
@@ -7,6 +7,7 @@
             transform: rotate(360deg);
         }
     }
+
     .azcend-loader-container {
         position: fixed;
         top: 0;
@@ -18,6 +19,7 @@
         z-index: 2147483647;
         background-color: #ffffff;
     }
+
     .azcend-loader {
         width: 75px;
         height: 75px;
@@ -37,18 +39,58 @@
 </div>
 
 <script>
-    var checkoutDomain = '<DOMAIN>';
-    var skipToCart = '<SKIP_TO_CART>';
+
+    // UTM params
+
+    var setCookie = function(name, value, days) {
+        var date = new Date();
+        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+        var expires = "expires=" + date.toUTCString();
+        document.cookie = name + "=" + value + ";" + expires + ";domain=" + checkoutDomain + ";path=/";
+    };
+
+    var getCookie = function(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(";");
+        for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) === " ") c = c.substring(1, c.length);
+            if (c.indexOf(nameEQ) === 0) return c.substring(nameEQ.length, c.length);
+        }
+        return null;
+    };
+
+    var urlParams = window.location.search.substring(1);
+    var params = {};
+    var paramsArray = urlParams.split("&");
+    for (var i = 0; i < paramsArray.length; i++) {
+        var pair = paramsArray[i].split("=");
+        params[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1] || "");
+    }
+
+    var cookieName = "_azcend_track";
+
+    if (urlParams) {
+        setCookie(cookieName, urlParams, 7);
+    } else {
+        var savedParams = getCookie(cookieName);
+        if (savedParams) window.location.search = savedParams;
+    }
+
+    // Redirect to checkout
+
+    var checkoutDomain = "<DOMAIN>";
+    var skipToCart = "<SKIP_TO_CART>";
 
     function ajaxRequest(method, url, data, callback) {
         const xhr = new XMLHttpRequest();
         xhr.open(method, url, true);
 
-        if (method === 'POST') {
-            xhr.setRequestHeader('Content-Type', 'application/json;charset=UTF-8');
+        if (method === "POST") {
+            xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
         }
 
-        xhr.onload = function () {
+        xhr.onload = function() {
             if (xhr.status === 200) {
                 callback(null, xhr.responseText);
             } else {
@@ -56,24 +98,24 @@
             }
         };
 
-        xhr.onerror = function () {
-            callback(new Error('Erro na requisição'), null);
+        xhr.onerror = function() {
+            callback(new Error("Erro na requisição"), null);
         };
 
         xhr.send(JSON.stringify(data));
     }
 
     function ajaxGet(url, callback) {
-        ajaxRequest('GET', url, null, callback);
+        ajaxRequest("GET", url, null, callback);
     }
 
     function ajaxPost(url, data, callback) {
-        ajaxRequest('POST', url, data, callback);
+        ajaxRequest("POST", url, data, callback);
     }
 
     function createInput(key, value) {
-        var input = document.createElement('input');
-        input.type = 'hidden';
+        var input = document.createElement("input");
+        input.type = "hidden";
         input.name = key;
         input.value = value;
 
@@ -82,32 +124,37 @@
 
     function addCurrentQueryParamsToURL(url) {
         var currentURL = window.location.href;
-        var interrogationIndex = currentURL.indexOf('?');
-        var currentQueryParams = '';
+        var interrogationIndex = currentURL.indexOf("?");
+        var currentQueryParams = "";
 
         if (interrogationIndex !== -1) {
             currentQueryParams = currentURL.substring(interrogationIndex + 1);
         }
 
         if (currentQueryParams) {
-            url += (url.indexOf('?') === -1 ? '?' : '&') + currentQueryParams;
+            url += (url.indexOf("?") === -1 ? "?" : "&") + currentQueryParams;
         }
 
         return url;
     }
 
     function goToCheckout(items) {
-        var url = addCurrentQueryParamsToURL('https://checkout.' + checkoutDomain);
+        var url = 'https://checkout.' + checkoutDomain;
+        var savedParams = getCookie(cookieName);
 
-        var checkoutForm = document.createElement('form');
-        checkoutForm.method = 'post';
+        if (savedParams) {
+            url += "/?" + savedParams;
+        }
+
+        var checkoutForm = document.createElement("form");
+        checkoutForm.method = "post";
         checkoutForm.action = url;
 
         for (var i = 1; i <= items.length; i++) {
             var item = items[i - 1];
-            checkoutForm.appendChild(createInput('product_id_' + i, item.product_id));
-            checkoutForm.appendChild(createInput('variant_id_' + i, item.variant_id));
-            checkoutForm.appendChild(createInput('product_amount_' + i, item.quantity));
+            checkoutForm.appendChild(createInput("product_id_" + i, item.product_id));
+            checkoutForm.appendChild(createInput("variant_id_" + i, item.variant_id));
+            checkoutForm.appendChild(createInput("product_amount_" + i, item.quantity));
         }
 
         document.body.appendChild(checkoutForm);
@@ -116,14 +163,14 @@
     }
 
     function showLoader() {
-        document.body.style.overflow = 'hidden';
+        document.body.style.overflow = "hidden";
 
-        var loaderContainer = document.querySelector('.azcend-loader-container');
-        loaderContainer.style.display = 'block';
+        var loaderContainer = document.querySelector(".azcend-loader-container");
+        loaderContainer.style.display = "block";
     }
 
     function clearCart() {
-        ajaxPost('/cart/clear.js', {}, function (error, response) {
+        ajaxPost("/cart/clear.js", {}, function(error, response) {
             if (error) {
                 console.error(error);
             }
@@ -139,8 +186,8 @@
     }
 
     var currentPage = '{{ template.name }}';
-    if (currentPage === 'cart' && skipToCart) {
-        ajaxGet('/cart.json', function (error, response) {
+    if (currentPage === "cart" && skipToCart) {
+        ajaxGet("/cart.json", function(error, response) {
             if (error) {
                 console.error(error);
             } else {
@@ -157,26 +204,26 @@
     var shop = '{{ shop.secure_url }}';
     var checkoutButtons = [];
 
-    document.addEventListener('click', function (e) {
-        var forms = document.getElementsByTagName('form');
+    document.addEventListener("click", function(e) {
+        var forms = document.getElementsByTagName("form");
 
         for (var i = 0; i < forms.length; i++) {
             var form = forms[i];
             var action = form.action;
 
-            if (action.includes('/cart') && !action.includes('/cart/add')) {
-                form.addEventListener('submit', function (e) {
+            if (action.includes("/cart") && !action.includes("/cart/add")) {
+                form.addEventListener("submit", function(e) {
                     e.preventDefault();
                 });
 
-                var checkoutButton = form.elements['checkout'];
+                var checkoutButton = form.elements["checkout"];
                 checkoutButtons.push(checkoutButton);
             }
         }
 
-        checkoutButtons = addElementsToArray('a[href="/checkout"]', checkoutButtons);
-        checkoutButtons = addElementsToArray('form[action="/cart"] [type="submit"]', checkoutButtons);
-        checkoutButtons = addElementsToArray('button[onclick="window.location=\'/checkout\'"]', checkoutButtons);
+        checkoutButtons = addElementsToArray("a[href=\"/checkout\"]", checkoutButtons);
+        checkoutButtons = addElementsToArray("form[action=\"/cart\"] [type=\"submit\"]", checkoutButtons);
+        checkoutButtons = addElementsToArray("button[onclick=\"window.location='/checkout'\"]", checkoutButtons);
 
         for (var i = 0; i < checkoutButtons.length; i++) {
             checkoutButton = checkoutButtons[i];
@@ -184,7 +231,7 @@
             if (checkoutButton && checkoutButton === e.target) {
                 e.preventDefault();
 
-                ajaxGet('/cart.json', function (error, response) {
+                ajaxGet("/cart.json", function(error, response) {
                     if (error) {
                         console.error(error);
                     } else {
@@ -197,4 +244,5 @@
             }
         }
     });
+
 </script>
