fix: shopify integration utm

--- a/Modules/Shopify/Stubs/AzcendSnippet.liquid
+++ b/Modules/Shopify/Stubs/AzcendSnippet.liquid
@@ -42,6 +42,7 @@
 
     // Config
     var checkoutDomain = "<DOMAIN>";
+    var cookieDomain = "<DOMAIN>";
     var skipToCart = "<SKIP_TO_CART>";
     var cookieName = "_azcend_track";
 
